[gd_scene load_steps=5 format=3 uid="uid://io2ysrbclfg3"]

[ext_resource type="Script" uid="uid://cbaqeqcsftsad" path="res://entities/game_entities/Spells_&_Projectiles/plague/infection.gd" id="1_aiccv"]
[ext_resource type="PackedScene" uid="uid://ckscfo8rpk2o8" path="res://entities/game_entities/Spells_&_Projectiles/vfx_scenes/extra/plague/plague.tscn" id="2_qnw7a"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_5sge4"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_sev1i"]
radius = 61.6604

[node name="Infection" type="Node2D"]
script = ExtResource("1_aiccv")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.395328, 0.708198, 0.147164, 1)
texture = SubResource("PlaceholderTexture2D_5sge4")

[node name="SpreadArea" type="Area2D" parent="."]

[node name="SpreadAreaCollision" type="CollisionShape2D" parent="SpreadArea"]
shape = SubResource("CircleShape2D_sev1i")
debug_color = Color(0, 0.435294, 0.027451, 0.419608)

[node name="Duration" type="Timer" parent="."]

[node name="BurnTick" type="Timer" parent="."]

[node name="plague" parent="." instance=ExtResource("2_qnw7a")]
scale = Vector2(0.5, 0.5)

[connection signal="body_entered" from="SpreadArea" to="." method="_on_spread_area_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="BurnTick" to="." method="_on_burn_tick_timeout"]
